feat&refactor: extensive code optimization and internationalization support
Signed-off-by: Misaki <2914883754@qq.com>